--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "@prisma/client": "^3.8.1",
+    "express": "^4.16.3",
+    "prisma": "^3.8.1"
   },
   "engines": {
     "node": ">=14"
