--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "memory": "node memory.js"
   },
   "dependencies": {
     "@prisma/client": "^3.8.1",
